# prisma-engines

./: .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .prettierignore  .prettierrc.toml  .rustfmt.toml  .trigger_build  AGENTS.md  Brewfile  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.lock~0b7ea496651b332de1577319012dc55e2083f643  Cargo.toml  Dockerfile  Dockerfile.amazonlinux  ICO.md  MULTIFIELD_TODO.md  Makefile  PENDING.md  README.md  bench-test.prisma  broken.prisma  datamodel_v2.prisma  deny.toml  docker-compose.doctor.yml  docker-compose.qe-tests.yml  docker-compose.yml  dummy.txt  engine_size.csv  fails.md  flake.nix  flaky_tests.md  index.html  multi-track-drifting.norg  prisma-gpg-private.asc  query.json  (+12 more)
doctor/: .gitignore  Cargo.toml  README.md  run_server.sh  start  start-engine  stop
doctor/src/: kb.rs  lib.rs  main.rs  pg.rs  query.rs
doctor/tests/: mod.rs
introspection-engine/core/: Cargo.toml  build.rs
introspection-engine/core/src/: cli.rs  command_error.rs  connector_loader.rs  error.rs  error_rendering.rs  lib.rs  main.rs  rpc.rs
introspection-engine/datamodel-renderer/: Cargo.toml
introspection-engine/datamodel-renderer/src/: configuration.rs  datamodel.rs  datasource.rs  enumerator.rs  generator.rs  lib.rs  value.rs
introspection-engine/introspection-engine-tests/: Cargo.toml  build.rs
introspection-engine/introspection-engine-tests/src/: lib.rs  test_api.rs
introspection-engine/introspection-engine-tests/tests/: introspection_tests.rs  simple.rs
libs/crosstarget-utils/: Cargo.toml
libs/crosstarget-utils/src/: common.rs  lib.rs
libs/dml/: Cargo.toml
libs/dml/src/: composite_type.rs  datamodel.rs  default_value.rs  enum.rs  field.rs  lib.rs  lift.rs  model.rs  native_type_instance.rs  relation_info.rs  render.rs
libs/driver-adapters/: Cargo.toml  package.json  pnpm-workspace.yaml
libs/driver-adapters/executor/: .gitignore  package.json  tsconfig.json  tsconfig.qc.json  tsconfig.qe.json
libs/driver-adapters/src/: error.rs  factory.rs  lib.rs  proxy.rs  queryable.rs  send_future.rs  transaction.rs  types.rs
libs/introspection-command/: Cargo.toml
libs/introspection-command/src/: lib.rs
libs/introspection-command/tests/: introspection_command_tests.rs
libs/json-rpc-stdio/: Cargo.toml
libs/json-rpc-stdio/src/: lib.rs
libs/metrics/: Cargo.toml
libs/metrics/src/: common.rs  formatters.rs  guards.rs  instrument.rs  lib.rs  recorder.rs  registry.rs
libs/mongodb-client/: Cargo.toml
libs/mongodb-client/src/: error.rs  lib.rs
libs/native-types/: Cargo.toml
libs/native-types/src/: cockroach.rs  error.rs  lib.rs  mongodb.rs  mssql.rs  mysql.rs  native_type.rs  parse.rs  postgres.rs  sqlite.rs  type_parameter.rs
libs/prisma-models/: Cargo.toml
libs/prisma-models/src/: datamodel_converter.rs  enum_type.rs  error.rs  field.rs  fields.rs  index.rs  internal_data_model.rs  lib.rs  model.rs  order_by.rs  pk.rs  prelude.rs  prisma_args.rs  prisma_value.rs  prisma_value_ext.rs  project.rs  record.rs  relation.rs  selected_fields.rs  sql_ext.rs
libs/prisma-models/tests/: datamodel_converter_tests.rs
libs/prisma-value/: Cargo.toml
libs/prisma-value/src/: arithmetic.rs  error.rs  lib.rs  raw_json.rs  sql_ext.rs  tagged.rs
libs/query-engine-common/: Cargo.toml
libs/query-engine-common/src/: engine.rs  error.rs  lib.rs  logger.rs  tracer.rs
libs/sql-connection/: Cargo.toml
libs/sql-connection/src/: connection_info.rs  generic_sql_connection.rs  lib.rs  mysql.rs  pooling.rs  postgres.rs  sql_family.rs  sqlite.rs  traits.rs
libs/sql-ddl/: Cargo.toml
libs/sql-ddl/src/: common.rs  lib.rs  mysql.rs  postgres.rs  sqlite.rs
libs/sql-schema-describer/: Cargo.toml
libs/sql-schema-describer/src/: common.rs  connector_data.rs  error.rs  getters.rs  ids.rs  lib.rs  mssql.rs  mysql.rs  parsers.rs  postgres.rs  sqlite.rs  walkers.rs
libs/sql-schema-describer/tests/: describer_tests.rs  introspection_tests.rs  mssql_describer_tests.rs  mssql_introspection_tests.rs  mysql_describer_tests.rs  mysql_introspection_tests.rs  postgres_describer_tests.rs  postgres_introspection_tests.rs  (+3 more)
libs/telemetry/: Cargo.toml
libs/test-cli/: Cargo.toml  build.rs
libs/test-macros/: Cargo.toml
libs/test-setup/: Cargo.toml
libs/user-facing-error-macros/: Cargo.toml
libs/user-facing-errors/: Cargo.toml  build.rs
migration-engine/cli/: Cargo.toml  README.md
prisma-fmt/: .gitignore  Cargo.toml  build.rs  build_wasm.sh  index.js  schema.prisma
prisma-fmt/pkg/: package.json
prisma-fmt/src/: actions.rs  code_actions.rs  find_where_used.rs  format.rs  get_config.rs  get_datamodel.rs  get_dmmf.rs  get_generators.rs  hover.rs  lib.rs  lint.rs  main.rs  merge_schemas.rs  native.rs  offsets.rs  preview.rs  references.rs  schema_file_input.rs  text_document_completion.rs  validate.rs
prisma-fmt/tests/: code_actions_tests.rs  helpers.rs  hover_tests.rs  native_types.rs  references_tests.rs  regression_tests.rs  text_document_completion_tests.rs
quaint/: .envrc  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  output  shell.nix
quaint-core/: Cargo.toml
quaint-core/src/: connector.rs  error.rs  lib.rs  prelude.rs  serde.rs  visitor.rs
quaint/db/: test.db
quaint/quaint-test-macros/: Cargo.toml
quaint/quaint-test-setup/: Cargo.toml
quaint/src/: ast.rs  connector.rs  error.rs  geometry.rs  lib.rs  macros.rs  pooled.rs  prelude.rs  serde.rs  single.rs  template.rs  visitor.rs
quaint/test-macros/: Cargo.toml
query-compiler/: Cargo.toml
query-compiler/core/: Cargo.toml
query-compiler/core-tests/: Cargo.toml  build.rs
query-compiler/dmmf/: Cargo.toml
query-compiler/query-compiler/: Cargo.toml
query-compiler/query-compiler-playground/: .gitignore  Cargo.toml
query-compiler/query-compiler-wasm/: Cargo.toml  build.sh  package.json
query-compiler/query-engine-tests-todo/: Cargo.toml
query-compiler/query-structure/: Cargo.toml
query-compiler/request-handlers/: Cargo.toml
query-compiler/schema/: Cargo.toml
query-compiler/src/: lib.rs  translate.rs
(+97920 files in other folders)
