[workspace]
resolver = "2"
members = [
  "schema-engine/cli",
  "schema-engine/core",
  "schema-engine/connectors/*",
  "schema-engine/datamodel-renderer",
  "schema-engine/json-rpc-api-build",
  "schema-engine/sql-migration-tests",
  "schema-engine/sql-introspection-tests",
  "schema-engine/mongodb-schema-describer",
  "schema-engine/sql-schema-describer",
  "query-engine/connectors/*",
  "query-engine/connector-test-kit-rs/qe-setup",
  "query-engine/connector-test-kit-rs/query-engine-tests",
  "query-engine/connector-test-kit-rs/query-test-macros",
  "query-engine/connector-test-kit-rs/query-tests-setup",
  "query-engine/core",
  "query-engine/core-tests",
  "query-engine/black-box-tests",
  "query-engine/dmmf",
  "query-engine/driver-adapters",
  "query-engine/metrics",
  "query-engine/query-structure",
  "query-engine/query-engine",
  "query-engine/query-engine-node-api",
  "query-engine/query-engine-wasm",
  "query-engine/query-engine-c-abi",
  "query-engine/request-handlers",
  "query-engine/schema",
  "libs/*",
  "prisma-fmt",
  "prisma-schema-wasm",
  "psl/*",
  "quaint",
]

[workspace.dependencies]
async-trait = { version = "0.1.77" }
enumflags2 = { version = "0.7", features = ["serde"] }
psl = { path = "./psl/psl" }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.25", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "io-std",
  "io-util",
  "parking_lot",
  "time",
] }
chrono = { version = "0.4", features = ["serde"] }
user-facing-errors = { path = "./libs/user-facing-errors" }
uuid = { version = "1", features = ["serde", "v4"] }
indoc = "2.0.1"
indexmap = { version = "2.2.2", features = ["serde"] }
itertools = "0.12"
connection-string = "0.2"
napi = { version = "2.15.1", default-features = false, features = [
  "napi8",
  "tokio_rt",
  "serde-json",
] }
napi-derive = "2.15.0"
js-sys = { version = "0.3" }
rand = { version = "0.8" }
serde_repr = { version = "0.1.17" }
serde-wasm-bindgen = { version = "0.5" }
tracing = { version = "0.1" }
tsify = { version = "0.4.5" }
wasm-bindgen = { version = "0.2.92" }
wasm-bindgen-futures = { version = "0.4" }
wasm-rs-dbg = { version = "0.1.2" }
wasm-bindgen-test = { version = "0.3.0" }
url = { version = "2.5.0" }

[workspace.dependencies.quaint]
path = "quaint"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release.package.query-engine-node-api]
strip = "symbols"

[profile.release.package.query-engine]
strip = "symbols"

[profile.release.package.query-engine-c-abi]
strip = "symbols"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 's'   # Optimize for size.

[profile.profiling]
inherits = "release"
debug = true
