[package]
name = "doctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = { version ="5.4.0", features = ["serde"] }
once_cell = "1"
sqlparser = { version = "0.35.0", features = ["serde", "visitor"] }
tokio-postgres = "0.7.8"
deadpool-postgres = { version = "0.9" }
num_cpus = "1"
regex = "1"

[workspace]