[package]
name = "doctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dashmap = { version ="5.4.0", features = ["serde"] }
deadpool-postgres = { version = "0.9" }
env_logger = "0.9.0"
log = "0.4"
num_cpus = "1"
once_cell = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.35.0", features = ["serde", "visitor"] }
tokio-postgres = "0.7.8"

[workspace]