[package]
name = "prisma-fmt"
version = "0.1.0"

[dependencies]
psl.workspace = true

serde_json.workspace = true
serde.workspace = true
lsp-types = "0.91.1"
log = "0.4.14"
indoc = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = "0.3"

[dev-dependencies]
dissimilar = "1.0.3"
once_cell = "1.9.0"
expect-test = "1"

[features]
# sigh please don't ask :(
vendored-openssl = []
