[package]
name = "prisma-fmt"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
dmmf = { path = "../query-engine/dmmf" }
psl = { workspace = true, features = ["all"] }
serde_json.workspace = true
serde.workspace = true
indoc.workspace = true
lsp-types = "0.95.1"
log = "0.4.14"
enumflags2.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = "0.3"

[dev-dependencies]
dissimilar = "1.0.3"
once_cell = "1.9.0"
expect-test = "1"

[features]
# sigh please don't ask :(
vendored-openssl = []
