[package]
name = "prisma-fmt"
version = "0.1.0"
edition = "2021"

[dependencies]
colored.workspace = true
dmmf.workspace = true
psl = { workspace = true, features = ["all"] }
serde_json.workspace = true
serde.workspace = true
indoc.workspace = true
lsp-types.workspace = true
log.workspace = true
enumflags2.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt.workspace = true

[dev-dependencies]
dissimilar.workspace = true
expect-test.workspace = true

[build-dependencies]
build-utils.workspace = true

[features]
# sigh please don't ask :(
vendored-openssl = []
