[package]
authors = [
  "Julius de Bruijn <bruijn@prisma.io>",
  "Katharina Fey <kookie@spacekookie.de>",
  "Tom Houlé <tom@tomhoule.com>",
  "Emanuel Jöbstl <emanuel.joebstl@gmail.com>",
  "Matthias Oertel <oertel@prisma.io>",
  "Dominic Petrick <petrick@prisma.io>",
]
description = "An abstraction layer for SQL databases."
documentation = "https://docs.rs/quaint/"
edition = "2021"
homepage = "https://github.com/prisma/quaint/"
keywords = ["mysql", "postgresql", "sqlite", "sql"]
license = "Apache-2.0"
name = "quaint"
readme = "README.md"
repository = "https://github.com/prisma/quaint/"
version = "0.2.0-alpha.13"
resolver = "2"

[package.metadata.docs.rs]
features = ["docs", "all"]

[features]
default = ["mysql", "postgresql", "mssql", "sqlite"]
docs = []
# Expose the underlying database drivers when a connector is enabled. This is a
# way to access database-specific methods when you need extra control.
expose-drivers = []

native = [
  "postgresql-native",
  "mysql-native",
  "mssql-native",
  "sqlite-native",
]

all = ["native", "pooled"]

vendored-openssl = [
  "postgres-native-tls/vendored-openssl",
  "mysql_async/vendored-openssl",
]

postgresql-native = [
  "postgresql",
  "native-tls",
  "tokio-postgres",
  "postgres-types",
  "postgres-native-tls",
  "bytes",
  "tokio",
  "bit-vec",
  "lru-cache",
  "byteorder",
]
postgresql = []

mssql-native = [
  "mssql",
  "tiberius",
  "tokio-util",
  "tokio/time",
  "tokio/net",
]
mssql = []

mysql-native = ["mysql", "mysql_async", "tokio/time", "lru-cache"]
mysql = ["chrono/std"]

pooled = ["mobc"]
sqlite-native = ["sqlite", "rusqlite/bundled", "tokio/sync"]
sqlite = []

fmt-sql = ["sqlformat"]

[dependencies]
connection-string = "0.2"
percent-encoding = "2"
tracing = "0.1"
tracing-core = "0.1"
async-trait = "0.1"
thiserror = "1.0"
num_cpus = "1.12"
metrics = "0.18"
futures = "0.3"
url = "2.1"
hex = "0.4"

either = { version = "1.6" }
base64 = { version = "0.12.3" }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
lru-cache = { version = "0.1", optional = true }
serde_json = { version = "1.0.48", features = ["float_roundtrip"] }
native-tls = { version = "0.2", optional = true }
bit-vec = { version = "0.6.1", optional = true }
bytes = { version = "1.0", optional = true }
mobc = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }
sqlformat = { version = "0.2.0", optional = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
once_cell = "1.3"
indoc = "0.3"
names = "0.11"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
quaint-test-macros = { path = "quaint-test-macros" }
quaint-test-setup = { path = "quaint-test-setup" }
tokio = { version = "1.0", features = ["macros", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.byteorder]
default-features = false
optional = true
version = ">1.4.0"

[dependencies.mysql_async]
git = "https://github.com/prisma/mysql_async"
optional = true
branch = "vendored-openssl"

[dependencies.rusqlite]
version = "0.29"
features = ["chrono", "column_decltype"]
optional = true

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies.tiberius]
version = "0.11.6"
optional = true
features = ["sql-browser-tokio", "chrono", "bigdecimal"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.tiberius]
version = "0.11.2"
optional = true
default-features = false
features = [
  "sql-browser-tokio",
  "vendored-openssl",
  "chrono",
  "bigdecimal",
  "tds73",
  "winauth",
]

[dependencies.bigdecimal]
version = "0.3"

[dependencies.tokio-postgres]
features = [
  "with-uuid-1",
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-bit-vec-0_6",
]
git = "https://github.com/prisma/rust-postgres"
branch = "pgbouncer-mode"
optional = true

[dependencies.postgres-types]
features = [
  "with-uuid-1",
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-bit-vec-0_6",
]
git = "https://github.com/prisma/rust-postgres"
branch = "pgbouncer-mode"
optional = true

[dependencies.postgres-native-tls]
git = "https://github.com/prisma/rust-postgres"
branch = "pgbouncer-mode"
optional = true

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros", "sync"]
optional = true

[dependencies.tokio-util]
version = "0.6"
features = ["compat"]
optional = true
