[package]
name = "introspection-core"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2018"

[features]
vendored-openssl = ["sql-introspection-connector/vendored-openssl"]

# Please keep the pyramid form
[dependencies]
datamodel = { path = "../../libs/datamodel/core" }
user-facing-errors = { path = "../../libs/user-facing-errors" }
introspection-connector = { path = "../connectors/introspection-connector" }
sql-introspection-connector = { path = "../connectors/sql-introspection-connector" }
mongodb-introspection-connector = { path = "../connectors/mongodb-introspection-connector" }

serde = "1.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde_derive = "1.0"
async-trait = "0.1.17"
jsonrpc-core = "17.0"
jsonrpc-derive = "17.0"
json-rpc-stdio = { path = "../../libs/json-rpc-stdio" }

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["macros"]

[[bin]]
name = "introspection-engine"
path = "src/main.rs"
