[package]
name = "introspection-core"
version = "0.1.0"
edition = "2021"

[features]
vendored-openssl = ["sql-introspection-connector/vendored-openssl"]

# Please keep the pyramid form
[dependencies]
psl.workspace = true
user-facing-errors = { path = "../../libs/user-facing-errors" }
introspection-connector = { path = "../connectors/introspection-connector" }
sql-introspection-connector = { path = "../connectors/sql-introspection-connector" }
mongodb-introspection-connector = { path = "../connectors/mongodb-introspection-connector" }

serde.workspace = true
serde_json.workspace = true
async-trait = "0.1.17"
jsonrpc-core = "17.0"
jsonrpc-derive = "17.0"
json-rpc-stdio = { path = "../../libs/json-rpc-stdio" }
tokio.workspace = true

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"

[[bin]]
name = "introspection-engine"
path = "src/main.rs"
