[package]
name = "datamodel-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"
psl.workspace = true
regex = "1.6.0"
base64 = "0.13.1"

[dev-dependencies]
expect-test = "1.4.0"
indoc = "1.0.7"
