[package]
name = "introspection-engine-tests"
version = "0.1.0"
authors = ["Julius de Bruijn <julius+github@nauk.io>"]
edition = "2021"

[dependencies]
sql-introspection-connector = { path = "../connectors/sql-introspection-connector" }
migration-connector = { path = "../../migration-engine/connectors/migration-connector" }
sql-migration-connector = { path = "../../migration-engine/connectors/sql-migration-connector" }
introspection-connector = { path = "../connectors/introspection-connector" }
introspection-core = { path = "../core" }
sql-schema-describer = { path = "../../libs/sql-schema-describer" }
psl.workspace = true
test-macros = { path = "../../libs/test-macros" }
user-facing-errors = { path = "../../libs/user-facing-errors" }
test-setup = { path = "../../libs/test-setup" }

enumflags2 = "0.7"
pretty_assertions = "1"
tracing-futures = "0.2"
tokio.workspace = true
serde_json = { version = "1.0", features = ["float_roundtrip"] }
tracing = "0.1"
indoc = "1"
expect-test = "1.1.0"
url = "2"
quaint.workspace = true

[dependencies.barrel]
git = "https://github.com/prisma/barrel.git"
features = ["sqlite3", "mysql", "pg", "mssql"]
branch = "mssql-support"
