[package]
name = "crosstarget-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
enumflags2.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
tokio = { version = "1", features = ["macros", "sync"] }
pin-project = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
regex.workspace = true
